# Robot-Programming

./: README.md
install/: local_setup.sh  setup.sh
install/navigation_/lib/navigation_/: laserScan_  mobile_base  odom_base  pub_occupancy_grid  tf_node
install/navigation_/share/navigation_/: local_setup.sh  package.sh
install/navigation_/share/navigation_/config/: MyMapTexture.material  capperlo_lase_odom_diag_2020-05-06-16-26-03.world  contr_param.yaml  costmap.yaml  diag1.rviz  nav2_param.yaml  planner.yaml  robot.urdf
install/navigation_/share/navigation_/launch/: mapping_launch copy.py  mapping_launch.py  nav2_launch
install/nodes/lib/nodes/: pub_node
install/nodes/share/nodes/: package.sh  package.xml
install/sam_bot_description/lib/sam_bot_description/: odom_base
install/sam_bot_description/share/sam_bot_description/: package.sh  package.xml
install/sam_bot_description/share/sam_bot_description/launch/: display.launch.py
install/sam_bot_description/share/sam_bot_description/src/description/: odom_base.cpp  sam_bot_description.urdf
log/: latest_build
navigation_/: CMakeLists.txt  package.xml
navigation_/config/: cappero_laser_odom_diag_2020-05-06-16-26-03.yaml  diag.rviz  nav2_param.yaml  prova.rviz
navigation_/launch/: mapping_launch.py  nav_launch.py
navigation_/src/: ipose.cpp  laser_scan.cpp  mobile_base.cpp  pub_occupancy_grid.cpp  tf_node.cpp
src/navigation_/: package.xml
src/navigation_/config/: default.rviz  diag.rviz  diag2.rviz  nav2_param.yaml  tb3_map.yaml
src/navigation_/launch/: mapping_launch.py  nav2_launch.py  nav_launch.py
src/navigation_/src/: ipose.cpp  laser_scan.cpp  mobile_base.cpp  pub_occupancy_grid.cpp
